samples/_failures_safe/1761160440_b7ded3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac199f38.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_ac199f38.c:187: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ac199f38.c:186:5: error: expected declaration or statement at end of input
  186 |     if
      |     ^~
